--- a/css/responsive.css
+++ b/css/responsive.css
@@ -45,6 +45,11 @@
 
 @media (max-width: 820px) {
 
+  html, body {
+  overflow-x: hidden;
+  position: relative;
+}
+
   .header {
     top: 1.2rem;
     left: 50%;
